	  Acrobat 6 which tries to decrypt the colormap of in-line
	  images twice, causing some very strange colors!
	- Table captions can now be bottom aligned.
	- Blocks now break at the bottom of a page if the
	  current line height + standard line height goes below
	  the bottom of the page; this prevents images with
	  captions from getting erroneously moved to the top of
	  the next page.

    BUG FIXES

	- Switching between landscape and portrait orientations
	  would cause margin creepage.
	- Images did not default to align=bottom, and the
	  align=bottom line spacing calculation was incorrect.
	- Whitespace before a link was underlined.
	- Fixed a table column sizing bug.
	- HTMLDOC didn't read back the HTTP response properly in
	  all situations.
	- Fixed some more PNG transparency cases.
	- The PageBoundingBox comments in PostScript output did
	  not account for the back page when duplexing was
	  enabled.
	- HTMLDOC generated an incorrect image mask for some
	  images.
	- The first page of each chapter did not use the custom
	  page number if it was placed inside the heading.
	- HTMLDOC did not reset the rendering cache before each
	  page when producing N-up output; this caused font
	  errors in some cases that prevented the document from
	  printing or displaying properly.
	- Eliminated a common cause of "table too wide"
	  formatting errors,
	- Fixed a bug when applying a table background color to
	  a cell without a border that cross a page boundary.
	- Fixed some calls to strcpy with overlapping arguments.
	- The names object was never set when the name objects
	  were written.


CHANGES IN HTMLDOC v1.8.23

    NEW FEATURES

	- HTMLDOC now supports a full alpha channel in PNG
	  files.
	- HTMLDOC now reports an error when a table, image, or
	  section of text overflows into an adjacent table cell
	  or off the right edge of the page.

    CHANGES

	- The NEW SHEET page comment now breaks on N-up
	  boundaries when N is greater than 1.

    BUG FIXES
