@@ -77,6 +77,10 @@
 	captions from getting erroneously moved to the top of
 	the next page.
 
+	<li>Character entities are now supported in HTML
+	attributes and unknown or invalid character entities
+	are left as plain text.
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>Switching between landscape and portrait orientations
